--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> 
+    <link rel="icon" type="image/png" href="/isologo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Fiesta NINJAGO!</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="¡Estás invitado a la Fiesta Ninja de Mario!" />
+    <meta property="og:description" content="Confirmá tu asistencia y unite a la aventura ninja 🥷🎉" />
+    <meta property="og:image" content="/isologo.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://invitacion-mario.netlify.app" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="¡Estás invitado a la Fiesta Ninja de Mario!" />
+    <meta name="twitter:description" content="Confirmá tu asistencia y unite a la aventura ninja 🥷🎉" />
+    <meta name="twitter:image" content="/isologo.png" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script> 
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
